--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -7,7 +7,7 @@
     background-size: cover;
     background-position: bottom center;
     background-repeat: no-repeat;
-    font-family:'Luckiest Guy', cursive;
+    font-family:'Audiowide', cursive;
     text-align: center;
     color: hsl(225, 70%, 16%);
     /* background-blend-mode: inherit; */
